--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TrackRepost - Grow on SoundCloud</title>
-  <link rel="stylesheet" href="styles.css" />
+  <title>TrackRepost - Promote & Grow on SoundCloud</title>
 
-  <!-- Firebase -->
+  <!-- ✅ SEO & Meta -->
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="description" content="TrackRepost is the fastest way to promote and engage with SoundCloud tracks. Earn credits, grow your reach, and connect with real fans.">
+  <meta property="og:title" content="TrackRepost" />
+  <meta property="og:description" content="Repost and promote SoundCloud tracks. Earn credits. Get heard." />
+  <meta property="og:image" content="/images/track-repost-logo.png" />
+  <meta property="og:url" content="https://www.trackrepost.com" />
+  <meta name="theme-color" content="#0d0d0d" />
+
+  <!-- ✅ Styles & Firebase -->
+  <link rel="stylesheet" href="styles.css" />
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
