--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TrackRepost - Promote & Grow on SoundCloud</title>
-
-  <!-- ✅ SEO & Meta -->
-  <link rel="icon" href="/favicon.ico" />
-  <meta name="description" content="TrackRepost is the fastest way to promote and engage with SoundCloud tracks. Earn credits, grow your reach, and connect with real fans.">
-  <meta property="og:title" content="TrackRepost" />
-  <meta property="og:description" content="Repost and promote SoundCloud tracks. Earn credits. Get heard." />
-  <meta property="og:image" content="/images/track-repost-logo.png" />
-  <meta property="og:url" content="https://www.trackrepost.com" />
-  <meta name="theme-color" content="#0d0d0d" />
-
-  <!-- ✅ Styles & Firebase -->
+  <title>TrackRepost – Grow on SoundCloud</title>
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- ✅ Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+  <!-- ✅ SEO Meta -->
+  <meta name="description" content="TrackRepost is the easiest way to promote your music on SoundCloud. Earn credits by reposting, then submit your track to boost your reach." />
+  <meta name="keywords" content="TrackRepost, SoundCloud promo, repost exchange, boost tracks, grow followers" />
+  <meta name="author" content="TrackRepost Team" />
+
+  <!-- ✅ Open Graph (Facebook, Discord, etc.) -->
+  <meta property="og:title" content="TrackRepost – Grow on SoundCloud" />
+  <meta property="og:description" content="Repost tracks, earn credits, and promote your music. Join TrackRepost for free." />
+  <meta property="og:image" content="/assets/trackrepost-social.jpg" />
+  <meta property="og:url" content="https://www.trackrepost.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- ✅ Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="TrackRepost – Grow on SoundCloud" />
+  <meta name="twitter:description" content="Repost tracks, earn credits, and promote your music. Join TrackRepost for free." />
+  <meta name="twitter:image" content="/assets/trackrepost-social.jpg" />
+
+  <!-- ✅ Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
@@ -102,5 +114,6 @@
   <script type="module" src="/js/header.js"></script>
 </body>
 </html>
+
 
 
