--- a/public/credits.html
+++ b/public/credits.html
@@ -3,27 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Buy Credits – TrackRepost</title>
-  <meta name="description" content="Buy credits to boost your tracks on SoundCloud through TrackRepost. Choose from multiple credit packages or enter a promo code to earn free credits.">
-  <meta name="keywords" content="SoundCloud promotion, buy credits, repost tracks, TrackRepost, music marketing">
-  <meta name="author" content="TrackRepost">
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="Buy Credits – TrackRepost">
-  <meta property="og:description" content="Boost your SoundCloud track visibility by purchasing credits or redeeming a promo code.">
-  <meta property="og:image" content="https://www.trackrepost.com/assets/social-preview.png">
-  <meta property="og:url" content="https://www.trackrepost.com/credits.html">
-  <meta property="og:type" content="website">
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Buy Credits – TrackRepost">
-  <meta name="twitter:description" content="Boost your SoundCloud track visibility with TrackRepost.">
-  <meta name="twitter:image" content="https://www.trackrepost.com/assets/social-preview.png">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/assets/favicon.png" />
-
+  <title>Buy Credits - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -39,31 +19,27 @@
     <button class="buy-btn" data-credits="1000">Buy 1000 Credits</button><br/><br/>
     <button class="buy-btn" data-credits="2500" data-plan="Artist">Buy 2500 + Artist Plan</button><br/><br/>
     <button class="buy-btn" data-credits="5000" data-plan="Network">Buy 5000 + Network Plan</button><br/><br/>
-    <button class="buy-btn" data-credits="25000" data-plan="Promoter">Buy 25,000 + Promoter Plan</button>
+    <button class="buy-btn" data-credits="25000" data-plan="Promoter">Buy 25,000 + Promoter Plan</button><br/><br/>
 
-    <hr style="margin: 40px auto; width: 50%; border: 1px solid #333;" />
+    <hr style="margin: 40px 0;" />
 
-    <h3>🎁 Have a Coupon Code?</h3>
-    <div id="coupon-box">
-      <input type="text" id="coupon-input" placeholder="Enter coupon code" style="padding: 8px; border-radius: 6px; border: none; width: 220px;" />
-      <button id="apply-coupon-btn" style="margin-left: 10px; padding: 8px 16px; background: #ffa500; border: none; color: black; font-weight: bold; border-radius: 6px;">Apply</button>
-      <p id="coupon-result" style="margin-top: 10px; font-weight: bold;"></p>
-    </div>
+    <h2>🎁 Got a Promo Code?</h2>
+    <input type="text" id="promoCode" placeholder="Enter coupon code..." style="padding: 10px; width: 250px; border-radius: 8px; border: none;">
+    <button id="applyCoupon" style="margin-left: 10px; padding: 10px 20px; background: #4caf50; color: white; border: none; border-radius: 8px; font-weight: bold;">Apply</button>
+    <p id="couponStatus" style="margin-top: 10px;"></p>
   </main>
 
   <footer style="text-align:center; padding: 20px;">
     <p>© 2025 TrackRepost. All Rights Reserved.</p>
   </footer>
 
-  <!-- Firebase -->
+  <!-- ✅ Firebase SDKs and logic at the bottom (so firebase is defined before use) -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
   <script src="/js/firebaseConfig.js"></script>
 
-  <script type="module">
-    import { applyCouponCode } from '/js/coupon-check.js';
-
+  <script>
     const auth = firebase.auth();
     const db = firebase.firestore();
 
@@ -119,36 +95,46 @@
       });
     });
 
-    // ✅ Handle Coupon Logic
-    const couponInput = document.getElementById("coupon-input");
-    const applyBtn = document.getElementById("apply-coupon-btn");
-    const resultBox = document.getElementById("coupon-result");
+    document.getElementById("applyCoupon").addEventListener("click", async () => {
+      const code = document.getElementById("promoCode").value.trim().toUpperCase();
+      const statusEl = document.getElementById("couponStatus");
 
-    applyBtn.addEventListener("click", async () => {
-      const code = couponInput.value.trim();
-      const reward = applyCouponCode(code);
+      if (!currentUser) {
+        statusEl.textContent = "Please log in to apply a coupon.";
+        return;
+      }
 
-      if (reward > 0) {
-        const user = auth.currentUser;
-        if (!user) {
-          resultBox.textContent = "❌ Please log in to use a coupon.";
-          return;
-        }
+      if (!code) {
+        statusEl.textContent = "❌ Please enter a coupon code.";
+        return;
+      }
 
-        const userRef = db.collection("users").doc(user.uid);
-        await userRef.update({
-          credits: firebase.firestore.FieldValue.increment(reward)
+      const usedRef = db.collection("users").doc(currentUser.uid);
+      const usedSnap = await usedRef.get();
+      const used = usedSnap.data()?.usedCoupons || [];
+
+      if (used.includes(code)) {
+        statusEl.textContent = "⚠️ You've already used this coupon.";
+        return;
+      }
+
+      if (code === "LAUNCH100") {
+        await db.runTransaction(async (tx) => {
+          tx.update(usedRef, {
+            credits: firebase.firestore.FieldValue.increment(100),
+            usedCoupons: firebase.firestore.FieldValue.arrayUnion(code),
+          });
         });
 
-        resultBox.textContent = `🎉 Coupon applied! You earned ${reward} free credits.`;
-        couponInput.value = "";
+        statusEl.textContent = "🎉 Coupon applied! 100 credits added.";
       } else {
-        resultBox.textContent = "❌ Invalid coupon code.";
+        statusEl.textContent = "❌ Invalid or expired coupon.";
       }
     });
   </script>
 </body>
 </html>
+
 
 
 
